# heatscout

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.0.md  ROADMAP.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
heatscout/: __init__.py
heatscout/core/: economics.py  examples.py  fluid_properties.py  heat_balance.py  pinch.py  scenario_comparison.py  sensitivity.py  stream.py  stream_analyzer.py  technology_selector.py
heatscout/data/: costs.json  fluids.json  technologies.json
heatscout/data/examples/: birrificio.json  cartiera.json  caseificio.json  ceramica.json  chimica.json  complesso_multi_stream.json  data_center.json  fonderia.json  tessile.json  (+1 more)
heatscout/knowledge/: cost_correlations.py  efficiency_models.py  incentives.py  tech_database.py
heatscout/plotting/: comparison_chart.py  pinch_curves.py  sankey.py
heatscout/report/: excel_export.py  executive_summary.py  pdf_generator.py  persistence.py  stream_import.py
heatscout/web/: app.py  chart_theme.py  components.py  styles.py
tests/: test_economics.py  test_efficiency.py  test_export.py  test_heat_balance.py  test_incentives.py  test_integration.py  test_persistence.py  test_physics_sanity.py  test_pinch.py  test_properties.py  test_sensitivity.py  test_snapshot_examples.py  test_stream.py  test_stream_analyzer.py  test_stream_import.py  test_technology_selector.py  test_validation_real.py  update_snapshots.py
tests/snapshots/: golden_examples.json
tests/validation_data/: real_case_studies.json
